# basalt-server

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  index.html  initial_data.db  migration.sql  openapi.yaml
.github/: actionlint.yml
.github/workflows/: cd.yml  ci.yml  docs.yml  main.yml  pr-close.yml  spellcheck.yml
basalt-server/: Cargo.toml  build.rs
basalt-server-lib/: Cargo.toml  README.md  build.rs  migration.sql
basalt-server-lib/src/: lib.rs  utils.rs
basalt-server-lib/src/extractors/: auth.rs
basalt-server-lib/src/macros/: orchestration.rs
basalt-server-lib/src/repositories/: announcements.rs  mod.rs  session.rs  submissions.rs  users.rs  util.rs
basalt-server-lib/src/server/: clock.rs  hooks.rs  mod.rs  orchestration.rs  teams.rs  tester.rs  websocket.rs
basalt-server-lib/src/server/hooks/: deno.rs  evaluator.rs  events.rs  handler.rs  handlers.rs  mod.rs  rhai.rs  webhooks.rs
basalt-server-lib/src/services/: announcements.rs  auth.rs  clock.rs  competition.rs  leaderboard.rs  mod.rs  questions.rs  teams.rs  testing.rs
basalt-server-lib/src/services/ws/: connect.rs  mod.rs
basalt-server-lib/src/storage/: mod.rs
basalt-server-lib/src/testing/: mod.rs  submissions_repositories.rs  users_repositories.rs
basalt-server-lib/tests/: single.toml
basalt-server/src/: main.rs
basalt-server/src/cli/: list.rs  mod.rs  run.rs
containers/: Dockerfile  minimal.Dockerfile  scripting.Dockerfile  webhooks.Dockerfile
nix-modules/: checks.nix
samples/: event-handlers.js  event-handlers.rhai  on-check-in.js  single.toml
scripts/: build.sh  enable-hooks.sh  init_db.sh
scripts/data/: hooks
src/: main.rs  testing.rs
src/cli/: docgen.rs  mod.rs  run.rs
src/extractors/: auth.rs
src/repositories/: session.rs  users.rs
src/server/: mod.rs
src/services/: auth.rs  questions.rs  ws.rs
src/services/auth/: mod.rs
src/services/ws/: connect.rs  mod.rs
src/storage/: mod.rs
src/testing/: mod.rs  users_repositories.rs
tests/: single.toml
