[package]
name = "basalt-server"
version = "0.1.0"
edition = "2021"
resolver = "2"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.95"
argon2 = "0.5.3"
async-tempfile = "0.6.0"
axum = { version = "0.8.1", features = ["macros", "ws"] }
bedrock = { git = "https://github.com/basalt-rs/bedrock.git", rev = "8461dc4", features = ["tokio"] }
clap = { version = "4.5.23", features = ["derive"] }
dashmap = "6.1.0"
directories = "6.0.0"
erudite = { git = "https://github.com/basalt-rs/erudite.git", rev = "7de318e", features = ["serde"] }
leucite = "0.2.0"
rand = "0.8.5"
redact = { version = "0.1.10", features = ["serde"] }
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio-native-tls"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tracing = { version = "0.1.41", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
utoipa-axum = { version = "0.2.0", features = ["debug"] }
utoipa = { version = "5.3.1", features = ["debug", "yaml"] }
scopeguard = "1.2.0"

[dev-dependencies]
async-tempfile = "0.6.0"

[build-dependencies]
tokio = { version = "1.43.0", features = ["full"] }
sqlx = { version = "0.8.3", features = ["sqlite"] }
anyhow = "1.0.95"
