[workspace]
members = ["basalt-server", "basalt-server-lib"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
rust-version = "1.82"

[workspace.dependencies]
anyhow = "1.0.95"
argon2 = { version = "0.5.3", features = ["password-hash"] }
async-tempfile = "0.6.0"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
axum = { version = "0.8.1", features = ["macros", "ws"] }
bedrock = { git = "https://github.com/basalt-rs/bedrock.git", rev = "0deb96b", features = [
    "tokio",
] }
clap = { version = "4.5.23", features = ["derive"] }
dashmap = { version = "6.1.0", features = ["serde"] }
derive_more = { version = "2.0.1", features = [
    "debug",
    "from",
    "deref",
    "into",
    "from_str",
] }
directories = "6.0.0"
erudite = { git = "https://github.com/basalt-rs/erudite.git", rev = "f45f587" }
lazy_static = "1.5.0"
rand = "0.8.5"
redact = { version = "0.1.10", features = ["serde"] }
scopeguard = "1.2.0"
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", features = [
    "sqlite",
    "runtime-tokio-native-tls",
    "time",
] }
thiserror = "2.0.16"
time = { version = "0.3.40", features = ["serde"] }
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "trace", "fs"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = { version = "0.1.41", features = ["release_max_level_debug"] }
utoipa-axum = { version = "0.2.0", features = ["debug"] }
utoipa = { version = "5.3.1", features = ["chrono", "debug", "yaml"] }
