[package]
name = "basalt-server-lib"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[features]
doc-gen = []

[dependencies]
anyhow.workspace = true
argon2.workspace = true
async-tempfile.workspace = true
axum-extra.workspace = true
axum.workspace = true
bedrock.workspace = true
dashmap.workspace = true
derive_more.workspace = true
directories.workspace = true
erudite.workspace = true
lazy_static.workspace = true
leucite.workspace = true
rand.workspace = true
redact.workspace = true
scopeguard.workspace = true
serde_json.workspace = true
serde.workspace = true
semver.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
utoipa-axum.workspace = true
utoipa.workspace = true

[dev-dependencies]
async-tempfile = "0.6.0"

[build-dependencies]
tokio = { version = "1.43.0", features = ["full"] }
sqlx = { version = "0.8.3", features = ["sqlite"] }
anyhow = "1.0.95"
