[package]
name = "basalt-server-lib"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[features]
doc-gen = []
default = ["doc-gen"]

[lints.clippy]
uninlined_format_args = "allow"

[dependencies]
anyhow.workspace = true
argon2.workspace = true
async-tempfile.workspace = true
axum-extra.workspace = true
axum.workspace = true
bedrock.workspace = true
dashmap.workspace = true
derive_more.workspace = true
directories.workspace = true
erudite = "1.0.0"
rand.workspace = true
redact.workspace = true
scopeguard.workspace = true
serde_json.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
utoipa-axum.workspace = true
utoipa.workspace = true
chrono = { version = "0.4.40", features = ["serde"] }
reqwest = { version = "0.13.2", features = ["json"] }
futures = "0.3.31"
ident-str = "0.1.0"

[dev-dependencies]
async-tempfile = { workspace = true, features = ["uuid"] }
tracing-subscriber.workspace = true

[build-dependencies]
tokio = { version = "1.43.0", features = ["full"] }
sqlx = { version = "0.8.3", features = ["sqlite"] }
anyhow = "1.0.95"
