[package]
name = "basalt-server"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[features]
doc-gen = []
webhooks = ["basalt-server-lib/webhooks"]
scripting = ["basalt-server-lib/scripting"]
full = ["webhooks", "scripting"]
default = ["full", "doc-gen"]

[lints.clippy]
uninlined_format_args = "allow"

[dependencies]
basalt-server-lib = { path = "../basalt-server-lib", default-features = false }
anyhow.workspace = true
axum.workspace = true
bedrock.workspace = true
clap.workspace = true
rand.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[build-dependencies]
basalt-server-lib = { path = "../basalt-server-lib", features = [
    "doc-gen",
], default-features = false }
anyhow.workspace = true
async-tempfile.workspace = true
bedrock.workspace = true
sqlx = { workspace = true, features = ["sqlite"] }
tokio = { workspace = true, features = ["full"] }
utoipa-axum.workspace = true
utoipa.workspace = true
